--- a/style.css
+++ b/style.css
@@ -1,9 +1,22 @@
-body {
+/* body {
   text-align: center;
-}
+} */
 
 .search-container {
   position: absolute;
   top: 50%;
   left: 50%
+}
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+li {
+  margin-left: 5px;
+}
+li:hover {
+  background-color: rgb(0 0 0 / 10%);
+  cursor: pointer;
+  transition: all 1s;
 }
