--- a/style.css
+++ b/style.css
@@ -11,12 +11,13 @@ ul {
   list-style-type: none;
   margin: 0;
   padding: 0;
+  background-color: white;
 }
 li {
   margin-left: 5px;
 }
 li:hover {
   background-color: rgb(0 0 0 / 10%);
-  cursor: pointer;
   transition: all 1s;
+  cursor: default;
 }
