--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
 .search-container {
   position: absolute;
   top: 50%;
-  left: 50%
+  left: 50%;
 }
 ul {
   list-style-type: none;
@@ -18,6 +18,6 @@ li {
 }
 li:hover {
   background-color: rgb(0 0 0 / 10%);
-  transition: all 1s;
+  transition: all 0.5s;
   cursor: default;
 }
